--- a/config/db_config.ini
+++ b/config/db_config.ini
@@ -1,5 +1,6 @@
-[database]
-host = "localhost"
-username = "root"
+[params_db_sql]
+host = "127.0.0.1"
+port = "3306"
+user = "root"
 password = ""
-dbname = "Workshop"
+db_name = "workshop"
